se agrego hidden a imagenes y quitar healt a pokemon

--- a/style.css
+++ b/style.css
@@ -47,19 +47,6 @@
   animation: spin 1s infinite linear;
 }
 
-@keyframes spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-#loader.show {
-  visibility: visible;
-}
-
 
 .div-imagen-poder {
   width: 100px;
@@ -70,4 +57,57 @@
 
 .div-imagen-poder:hover {
   width: 300px;
+}
+
+#loader_1{
+  visibility: hidden;
+  width: 80px;
+  height: 80px;
+  border: 2px solid #f3f3f3;
+  border-top: 3px solid #f25a41;
+  border-radius: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  animation: spin 1s infinite linear;
+}
+
+#loader_2{
+  visibility: hidden;
+  width: 80px;
+  height: 80px;
+  border: 2px solid #f3f3f3;
+  border-top: 3px solid #f25a41;
+  border-radius: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  animation: spin 1s infinite linear;
+}
+
+#loader.show {
+  visibility: visible;
+}
+
+#loader_1.show{
+  visibility: visible;
+}
+
+#loader_2.show{
+  visibility: visible;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
